--- a/app/src/main/res/layout/fragment_anomaly_detail.xml
+++ b/app/src/main/res/layout/fragment_anomaly_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,48 +16,54 @@
         android:id="@+id/layout_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/cv_toolbar"
-        android:padding="20dp">
+        android:padding="20dp"
+        app:layout_constraintTop_toBottomOf="@id/cv_toolbar">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/card_measurement_info"
+            style="@style/Widget.Material3.CardView.Outlined"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:cardCornerRadius="8dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" >
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/measurement_information"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
                     android:gravity="center"
-                    android:paddingBottom="8dp" />
+                    android:paddingBottom="8dp"
+                    android:text="@string/measurement_information"
+                    android:textColor="@color/md_theme_onSurface"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingBottom="6dp">
+
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/reading_time"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/tvReadingTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -67,16 +72,20 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingBottom="6dp">
+
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/meter_serial_number"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/tvMeterSerialNumber"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -85,16 +94,20 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingBottom="6dp">
+
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/meter_type"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/tvMeterType"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -103,46 +116,52 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingBottom="6dp">
+
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/data_type"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/tvDataType"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
                 </LinearLayout>
 
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/card_energy_consumption"
+            style="@style/Widget.Material3.CardView.Outlined"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             app:cardCornerRadius="8dp"
-            app:layout_constraintTop_toBottomOf="@id/card_measurement_info"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="20dp">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/card_measurement_info">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/energy_consumption"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
                     android:gravity="center"
-                    android:paddingBottom="8dp" />
+                    android:paddingBottom="8dp"
+                    android:text="@string/energy_consumption"
+                    android:textColor="@color/md_theme_onSurface"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <!-- Row for each data field -->
                 <LinearLayout
@@ -150,16 +169,20 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingBottom="6dp">
+
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/active_energy_import"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/tvActiveEnergyImport"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -168,16 +191,20 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingBottom="6dp">
+
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/active_energy_export"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/tvActiveEnergyExport"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -186,16 +213,20 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingBottom="6dp">
+
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/reactive_energy_import"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/tvReactiveEnergyImport"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -204,16 +235,20 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingBottom="6dp">
+
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/reactive_energy_export"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/tvReactiveEnergyExport"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -222,16 +257,20 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:paddingBottom="6dp">
+
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/apparent_energy_import"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/tvApparentEnergyImport"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -239,40 +278,48 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/apparent_energy_export"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/tvApparentEnergyExport"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:paddingBottom="6dp" />
+                        android:paddingBottom="6dp"
+                        android:textColor="@color/md_theme_onSurface"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/predicted_energy"
+                        android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/tvPredictedEnergy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:paddingBottom="6dp" />
+                        android:paddingBottom="6dp"
+                        android:textColor="@color/md_theme_onSurface"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
