--- a/app/src/main/res/layout/fragment_anomaly_detail.xml
+++ b/app/src/main/res/layout/fragment_anomaly_detail.xml
@@ -77,6 +77,28 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:text="Position"
+                        android:textColor="@color/md_theme_onSurface"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/tvPosition"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/md_theme_onSurface"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingBottom="6dp">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="@string/meter_serial_number"
                         android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
@@ -196,56 +218,12 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/active_energy_export"
-                        android:textColor="@color/md_theme_onSurface"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/tvActiveEnergyExport"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/md_theme_onSurface"
-                        android:textSize="14sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingBottom="6dp">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:text="@string/reactive_energy_import"
                         android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tvReactiveEnergyImport"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/md_theme_onSurface"
-                        android:textSize="14sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingBottom="6dp">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/reactive_energy_export"
-                        android:textColor="@color/md_theme_onSurface"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/tvReactiveEnergyExport"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/md_theme_onSurface"
@@ -270,50 +248,6 @@
                         android:id="@+id/tvApparentEnergyImport"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/md_theme_onSurface"
-                        android:textSize="14sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/apparent_energy_export"
-                        android:textColor="@color/md_theme_onSurface"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/tvApparentEnergyExport"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="6dp"
-                        android:textColor="@color/md_theme_onSurface"
-                        android:textSize="14sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/predicted_energy"
-                        android:textColor="@color/md_theme_onSurface"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/tvPredictedEnergy"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="6dp"
                         android:textColor="@color/md_theme_onSurface"
                         android:textSize="14sp" />
                 </LinearLayout>
